--- a/app/src/main/res/layout/activity_detail_user.xml
+++ b/app/src/main/res/layout/activity_detail_user.xml
@@ -41,5 +41,18 @@
         android:text="First Name : lorem"
         android:textSize="15sp"
         android:textStyle="bold"/>
+    <Button
+        android:id="@+id/btn_edit_user"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Edit"
+        android:layout_marginTop="30dp"/>
+    <Button
+        android:id="@+id/btn_delete_user"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="0dp"
+        android:text="delete"
+        android:backgroundTint="@color/red"/>
 
 </LinearLayout>
